--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,27 @@
 :root {
     --light-yellow: hsl(60, 100%, 50%);
-    --black-color:hsl(0, 2%, 10%);
-    --lucida-font:'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    --black-color: hsl(0, 2%, 10%);
+    --light-gray: rgba(183, 183, 183, 0.84);
+    --section-margin: clamp(7vw, 2rem + 3vw, 10vw);
 
-    --apple-font:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif:
+    color-scheme: light dark;
+}
 
-    --size:1;
-    --section-margin:clamp(7vw, 2rem + 3vw, 10vw);
+
+@font-face {
+    font-family: 'poppins';
+    src: '../fonts/Poppins-Light.ttf';
+    font-family: 'roboto';
+    src: '../fonts/Roboto-Medium.ttf';
 
 }
 
+
 /* basic reset css */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -20,26 +29,31 @@
 
 a {
     text-decoration: none;
-    color: black;
 }
 
 li {
     list-style: none;
 }
 
-img, svg {
+img,
+svg {
     max-width: 100%;
 
 }
 
+body {
+    font-family: 'poppins';
+}
+
 /* box for hamburger menu */
 .box {
-    position: absolute;
-    top: 34px;
-    right: 125px;
+    position: relative;
+    top: 6px;
+    right: -75px;
     width: 40px;
     height: 40px;
     cursor: pointer;
+    /* z-index: 10; */
 }
 
 @media (min-width:822px) {
@@ -49,37 +63,35 @@ img, svg {
 }
 
 
-.lign::before {
-    content: '';
-    display: inline-block;
-    width: 100%;
-    height: 3px;
-    background-color: black;
-    position: relative;
-    bottom: 3px;
-}
-
 .lign {
     width: 100%;
     height: 3px;
-    background-color: black;
+    background-color: white;
     position: relative;
     top: 5px;
     transition: all .5s ease-out;
 }
 
+.lign::before,
 .lign::after {
     content: '';
     display: inline-block;
     width: 100%;
     height: 3px;
-    background-color: black;
+    background-color: white;
     position: relative;
+}
+
+.lign::before {
+    bottom: 3px;
+}
+
+.lign::after {
     bottom: 13px;
 }
 
+
 .lign.active {
-    width: 100%;
     transform: rotate(-45deg);
     transition: transform .5s ease-out;
 }
@@ -91,6 +103,12 @@ img, svg {
     transition: width .3s ease-in;
 }
 
+/* theme switch */
+
+#theme-switch i {
+    margin-inline: .6rem;
+    cursor: pointer;
+}
 
 /* nav */
 
@@ -100,29 +118,55 @@ nav {
     align-items: center;
     min-height: min(12vh, 10rem);
     padding-inline: 4vw;
-    background-color: rgb(255, 255, 255);
-     position: sticky;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 9;
 }
 
+nav * {
+    color: white;
+}
+
+nav.scroll {
+    background-color: white;
+}
+
+nav.scroll>* {
+    filter: invert(100%);
+    transition: filter 0.3s ease-in;
+}
+
+
 .nav__link {
     display: flex;
+}
+
+.nav__link a {
+    position: relative;
+}
+
+.nav__link a.hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 35px;
+    width: 100%;
+    border-bottom: 3px solid var(--light-yellow);
+    transition: border-bottom .5s ease-out;
 }
 
 
 @media screen and (max-width: 822px) {
 
     .nav__link {
-            display: none;
-            background-color:var(--black-color) ;
-            transition: all .5s ease-out;
-        }
+        display: none;
+        background-color: var(--black-color);
+        transition: all .5s ease-out;
+    }
 
     .nav__link li a {
         color: white;
-        padding-block: 1em;
     }
 
     .nav__link li {
@@ -135,116 +179,76 @@ nav {
         position: absolute;
         width: 100%;
         padding-block: clamp(1em, 0.8rem + 2vh, 3em);
-        top: 6rem;
+        top: 5rem;
         left: 0rem;
         z-index: 9;
     }
 }
 
 
-/* .nav__link a:hover {
-    transform: scale(2px);
-} */
-
 #logo {
     font-size: clamp(1rem, 1rem + 2vw, 2rem);
     line-height: 1rem;
     font-weight: 700;
-    font-family: var(--apple-font);
+    font-family: 'roboto';
 }
 
 .link {
     margin-inline: min(2rem, 2vw);
 }
 
-/* .nav__svg a {
-    display: block;
-}
 
-.nav__svg {
-    display: flex;
-    min-height: 100%;
-    justify-content: space-between;
-    align-items: center;
-} */
-
-.nav__svg img {
-    max-width: 1.4rem;
-    height: 1.4rem;
+.nav__svg i {
+    padding-inline: .5rem;
+    cursor: pointer;
 }
 
 
 /* header */
 
-.links {
-    margin-block: .4rem;
-}
-
-.social_link,
-.branch {
-    font-family: var(--apple-font);
-    text-align: center;
-    font-size: 0.9rem;
-}
-
-:is(.social_link, .branch) a {
-    margin-inline: .4rem;
-}
-
-@media  screen and (max-width:822px) {
-    .links {
-        /* transform: translateY(-30px); */
-        position: absolute;
-        top: 120px;
-        right: clamp(20vw, 18vw + 10%, 2vw);
-        /* right: 60vw; */
-        width: max-content;
-    }
-
-    .links a {
-        color: rgb(189, 189, 255);
-        text-decoration: underline rgb(189, 189, 255) 1px;
-        line-height: 1.9;
-    }
-}
-
-
-header  {
-    height: auto;
-    /* border: 2px solid orangered; */
-}
-
-/* header img {
-    display: none;
-} */
-
-.header {
-    background-image: url("img/light.jpg");
-    background-color: rgba(255, 215, 0, 0.84);
-    /* filter: blur(1rem); */
-    background-blend-mode: hard-light;
+header {
+    position: relative;
+    top: -81px;
+    background-image: url('../img/iphone-13-black.jpg');
+    background-color: rgba(91, 90, 90, 0.93);
+    background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position:center;
-    /* object-fit: cover; */
-    min-height: min(40rem, 80vh);
-    /* border: 1px dashed orchid; */
-    /* clip-path: polygon(100% 0%,9% 0%, 80% 80% ,90% 90%); */
+    background-position: center;
+    min-height: 105vh;
 }
+
 
 .header__content {
     color: white;
     width: min(100vw, 30rem + 20vw);
     margin-inline: auto;
-    padding-block: min(6rem, calc(10px + 3vh));
+    padding-block: 16vh min(6rem, calc(10px + 3vh));
     padding-inline: min(6vw, 6%);
 }
 
 .header__content h1 {
+    font-family: 'roboto';
     padding-block: 4rem;
     text-align: center;
     font-size: clamp(1.6rem, 2rem + 2vw, 4rem);
 }
+
+/* title animatiom. */
+
+@media (prefers-reduced-motion:no-preference) {
+    #header__title {
+        transform: translateX(-800px) scale(0);
+        opacity: 0;
+    }
+
+    #header__title.animate {
+        transform: translate(0px) scale(1);
+        opacity: 1;
+        transition: all 2s cubic-bezier(0.215, 0.610, 0.355, 1) .5s;
+    }
+}
+
 
 .header__content p {
     font-size: clamp(.9rem, 1rem + .3vw, 1.4rem);
@@ -252,15 +256,27 @@ header  {
     margin-block-end: 1.8em;
 }
 
+/* lasy-loading */
 
-:is(.header__content, .top__product ) span {
+.top__product,
+.brand,
+.card__container {
+    opacity: 0;
+}
+
+:is(.top__product, .brand, .card__container).lazy-loading {
+    opacity: 1;
+    transition: opacity .8s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+:is(.header__content, .top__product) span {
     border-left: 2px solid white;
     padding-inline-start: 6px;
 }
 
 :is(.header__content, .about_us) a {
     width: min-content;
-    padding:0.5em 1.2em;
+    padding: 0.5em 1.2em;
     background-color: var(--black-color);
     color: white;
     border: 2px solid var(--light-yellow);
@@ -277,9 +293,8 @@ header  {
 
 /* information part */
 .information {
-    padding: clamp(.8rem, .8rem + 2vh, 1.4rem);
-    background-color: rgba(255, 255, 143, 0.413);
     display: flex;
+    margin-inline: var(--section-margin);
 }
 
 @media screen and (max-width:822px) {
@@ -288,16 +303,15 @@ header  {
     }
 }
 
-.information > * {
+.information>* {
     padding-block: min(1.4rem, 2vh);
     text-align: center;
 }
 
-.information > p {
+.information>p {
     font-size: clamp(1rem, 1rem + 1vw, 1.4rem);
     flex: 2 1 auto;
     align-self: center;
-    /* border: 1px solid red; */
 }
 
 .bolder__title {
@@ -310,18 +324,26 @@ header  {
 .rating,
 .average {
     flex: 4 1 auto;
-    /* border: 1px solid blue; */
     display: flex;
     flex-direction: column;
     row-gap: .5rem;
 }
 
+/* body element background */
+
+.information,
+.branding,
+.testimonials {
+    background-color: white;
+}
+
 section {
     margin-block: min(7rem, 1rem + 9vw);
+    background-color: white;
 }
 
 section:last-of-type {
-    margin-block-end: initial;
+    margin-block: initial;
 }
 
 section p {
@@ -333,6 +355,7 @@ section p {
 .section__title {
     text-align: center;
     font-size: clamp(1.2rem, 1rem + 2vw, 2.2rem);
+    font-family: 'roboto';
     font-weight: 600;
     margin-block: max(5vw, 5vh);
     transition: all .3s cubic-bezier(0.47, 0, 0.745, 0.715);
@@ -343,33 +366,27 @@ section p {
     transition: filter .3s cubic-bezier(0.47, 0, 0.745, 0.715);
 }
 
-
 .branding {
     margin-inline: var(--section-margin);
-    /* clip-path: circle(50%); */
 }
 
-.branding .section__title ~ p {
+.branding .section__title~p {
     margin-inline: min(4vw, 4rem);
     margin-block-end: min(8vh, 3rem + 3vw);
     line-height: 1.7rem;
     font-size: clamp(.8rem, 0.8rem + 2vw, 1.05rem);
 }
 
-
 :is(.brand, .top__product) div {
-    /* min-height: 34vh; */
-    /* border: 4px solid rgb(51, 175, 156); */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 1em  1.4em;
+    padding: 1em 1em 2rem;
     border-radius: min(16px, 2vw);
     transform: initial;
     transition: box-shadow, transform .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
-
 
 :is(.brand, .top__product) p {
     inline-size: min(80%, 80ch);
@@ -380,10 +397,12 @@ section p {
 @media screen and (max-width:820px) {
 
     .branding {
-            margin-inline: calc(var(--section-margin) * 0.5);
-        }
+        margin-inline: calc(var(--section-margin) * 0.5);
+    }
 
-    .brand, .top__product, .card__container {
+    .brand,
+    .top__product,
+    .card__container {
         display: flex;
         flex-direction: row;
         overflow-inline: auto;
@@ -391,7 +410,7 @@ section p {
         scroll-behavior: smooth;
     }
 
-    :is(.brand, .top__product, .card__container) > div {
+    :is(.brand, .top__product, .card__container)>div {
         flex-shrink: 0;
         flex-basis: min(100%, 30em);
         scroll-snap-align: center;
@@ -399,7 +418,6 @@ section p {
         margin-block-end: 1em;
         margin-inline: 2em;
         padding: 1em;
-        /* padding: 2em; */
     }
 
     .about_us .section__title {
@@ -409,11 +427,13 @@ section p {
 
 
 @media screen and (min-width:820px) {
-    .brand, .top__product {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: min(8vw, 3rem);
-        }
+
+    .brand,
+    .top__product {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: min(8vw, 3rem);
+    }
 
     :is(.brand, .top__product) div {
         box-shadow: 0px 0px 8px 1px rgba(147, 147, 147, 0.605);
@@ -421,7 +441,7 @@ section p {
 
     :is(.brand, .top__product) div:hover {
         box-shadow: 0px 0px 8px 1px rgba(91, 91, 91, 0.866);
-        transform: scale(1.1);
+        transform: scale(1.04);
         transition: all .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 }
@@ -430,40 +450,30 @@ section p {
 
 .brand img {
     max-inline-size: clamp(3.5rem, 3rem + 2vw, 100%);
-    /* border: 4px solid red; */
 }
 
-.top__product img  {
+.top__product img {
     width: 100%;
-    /* border: 3px solid red; */
+    max-height: 220px;
+    object-fit: cover;
     border-radius: min(8px, 1vw);
-    margin-block:.5em 1.5em;
-    color: red;
+    margin-block: .5em 1.5em;
 }
 
 
-
-/* @media (prefer-reduce-motion) {
-    .brand div: hover {
-        
-    }
-} */
 
 :is(.brand, .top__prouct) div h4 {
-    font-size: clamp(1.1rem, 1rem + 2vw , 1.3rem);
+    font-size: clamp(1.1rem, 1rem + 2vw, 1.3rem);
+    font-family: 'roboto';
 
 }
 
-/* :is(.brand div) p, a {
-    margin-block-end: 1.5rem;
-} */
 
 .top__product a {
     width: auto;
     padding: 0.5em 1.2em;
     background-color: var(--black-color);
     color: white;
-    /* border: 2px solid var(--light-yellow); */
     border-radius: 3px;
     border-radius: 8px;
     transition: background-color .4s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -479,35 +489,49 @@ section p {
 /* about us  */
 
 .about_us {
-    /* margin-block: 6rem; */
+    min-height: 90vh;
+    margin-block: 6rem 0rem;
+    padding-block: 5em;
+    background-image: url("../img/iphone-light.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+    background-color: rgba(66, 66, 66, 0.93);
+    background-blend-mode: darken;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-    gap: 3rem;
-    /* max-height: 44vh; */
-    margin-inline: var(--section-margin);
-    /* border: 2px solid blueviolet; */
+    place-items: center;
 }
 
-/* .about_us img {
-    max-width: 100%;
-    max-height: 80%; 
-    object-fit: contain;
-} */
 
 
-.about_us div:nth-of-type(2) {
-    align-self: center;
-    text-align: start;
+@media (prefers-reduced-motion:no-preference) {
+    .about_us {
+        transform: scale(0.4);
+
+    }
+
+    .about_us.lazy-loading {
+        transform: scale(1);
+        transition: transform .8s ease-out;
+    }
+
 }
 
-.about_us div:nth-of-type(2) p {
+
+.about_us div {
+    width: clamp(30vw, 50vw + 20%, 80ch);
+    margin: 0 auto;
+    color: white;
+}
+
+.about_us div p {
     font-size: clamp(.9rem, 1rem + 1vw, 1.2rem);
     padding: clamp(0rem, 2vw + 1vh, 1rem);
 }
 
 .about_us a {
     display: block;
-    margin-inline: auto;
+    margin: 2em auto 0em;
     width: fit-content;
     color: var(--black-color);
     background-color: var(--light-yellow);
@@ -515,7 +539,7 @@ section p {
 }
 
 .about_us a:hover {
-    color:var(--light-yellow);
+    color: var(--light-yellow);
     background-color: var(--black-color);
     transition: all .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
@@ -524,22 +548,20 @@ section p {
 /* testimonials */
 
 .testimonials {
-    background: linear-gradient(var(--light-yellow) 10%, var(--black-color));
-    backdrop-filter: blur(20px);
-    /* background: conic-gradient(var(--light-yellow) 10%, var(--black-color)); */
     padding: 0rem var(--section-margin) 4rem;
+    background-color: white;
 }
 
-.testimonials > div:first-of-type {
+.testimonials>div:first-of-type {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.slide_btn > img {
-    width:26px;
-    /* filter: invert(90); */
-    
+.slide_btn>i {
+    padding-inline: .5em;
+    display: inline-block;
+    cursor: pointer;
 }
 
 @media screen and (min-width:820px) {
@@ -550,37 +572,15 @@ section p {
     }
 }
 
-/* @media screen and (max-width:740px) {
-
-} */
-
-
-
 .card {
     min-height: fit-content;
     padding: 1.6rem 1.8rem;
-    background-color: white;
-    box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 0.605);
     border-radius: 16px;
-    transition: box-shadow .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.card:hover {
-    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.856);
-    transition: box-shadow .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-
 }
 
 .start {
     margin-block: 1rem;
 }
-
-.start img {
-    width: 22px;
-    backdrop-filter: invert(5%);
-    -webkit-backdrop-filter: invert(5%);
-}
-
 
 .profil {
     display: flex;
@@ -588,36 +588,95 @@ section p {
     margin-block-start: 1.4rem;
 }
 
-.profil > img {
-    width: 20%;
-    height: 29%;
+.profil>img {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    object-fit: cover;
     border-radius: 66%;
-    filter: drop-shadow(0px 0px 3px rgba(130, 130, 130, 0.863));
+    filter: drop-shadow(0px 0px 2px var(--light-gray));
 }
 
 .profil p {
-    font-size:clamp(.7rem, .8rem + 2vw, .9rem); ;
+    font-size: clamp(.7rem, .8rem + 2vw, .9rem);
+    ;
 }
-
 
 
 /* footer */
 
 footer {
-    padding-block: 2em;
+    padding: 2em;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-items: center;
     align-items: center;
     gap: 1.4em;
+    background-color: black;
+    color: white;
 }
+
+
 
 footer div {
     font-size: clamp(1em, 1em + 2vw, 1.6em);
     font-weight: 600;
-    font-style: var(--apple-font);
+    font-style: 'roboto';
 }
 
 footer p {
     font-size: clamp(.7em, 0.8em + 1vw, 1.1em);
+}
+
+
+
+/* dark theme for user agent */
+
+@media (prefers-color-scheme:dark) {
+
+    body,
+    footer,
+    .information,
+    .branding,
+    .testimonials {
+        background-color: var(--black-color);
+    }
+
+    :is(body, footer,
+        .information,
+        .branding)>* {
+        color: white;
+    }
+
+    :is(.brand, .top__product, .card__container, .brand:hover,
+        .top__product:hover, .card__container:hover)>div {
+        border: 1px solid var(--light-gray);
+        ;
+        border-radius: 10px;
+        box-shadow: initial;
+    }
+
+    .top__product img {
+        border: 1px solid var(--light-gray);
+        ;
+        border-radius: 6px;
+    }
+
+    .top__product a {
+        border: 1px solid var(--light-yellow);
+    }
+
+
+    .profil img {
+        border: 1px solid var(--light-gray);
+    }
+
+    .about_us {
+        background-position: 20%;
+    }
+
+    footer {
+        border-top: 1px solid var(--light-gray);
+    }
+
 }
